--- a/locales/index_en.json
+++ b/locales/index_en.json
@@ -1,5 +1,6 @@
 {
 	"welcome_title": "Welcome Landing Page",
 	"welcome_message": "Welcome to the frontierpractice landing page. Replace this content with your own",
-  "sample_link": "View a sample page"
+  "sample_link": "View a sample page",
+  "size_link": "Go to Dynamic Size Page"
 }
